[package]
name = "whatsappweb"
version = "0.0.2"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
build = "build.rs"
description = "WIP Whatsapp Web API Client"
repository = "https://github.com/wiomoc/whatsappweb-rs"
readme = "README.md"
categories = ["api"]
license = "MIT"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 16

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
ws = {version = "0.9.2", features = ["ssl"]}
log = "0.4.27"
simple_logger = "5.0.0"
url = "2.5.7"
json = "0.12.4"
ring = "0.17.14"
base64 = "0.22.1"
qrcode = "0.14.1"
image = "0.25.6"
untrusted = "0.9.0"
rust-crypto = "^0.2"
serde = "1.0.219"
serde_derive = "1.0.219"
bincode = "1.3.3"
byteorder = "1.5.0"
protobuf = "2.28.0"
chrono = "0.4.41"
reqwest = { version = "0.12.23", features = ["blocking", "multipart", "json"], optional = true}
error-chain = "0.12.4"

[features]
default = ["media"]
"media" = ["reqwest"]

[build-dependencies]
protobuf-codegen-pure = "2.28.0"